--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -25,8 +25,8 @@
       </li>
       <li>
         <button
-          routerLink="/login"
-          class="bg-blue-500 hover:bg-blue-700 text-white px-4 rounded-full"
+          routerLink="/signup"
+          class="bg-blue-500 drop-shadow-lg hover:bg-blue-800 text-white px-4 rounded-full"
         >
           Signup
         </button>
