--- a/src/app/components/pages/signup-page/signup-page.component.html
+++ b/src/app/components/pages/signup-page/signup-page.component.html
@@ -42,10 +42,10 @@
     </div>
     <div class="flex items-center justify-between">
       <button
-        class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-4 px-4 rounded focus:outline-none focus:shadow-outline"
         type="button"
       >
-        Sign In
+        Sign Up
       </button>
     </div>
   </form>
